# Challenge

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Challenge.sln  Challenge.vcxproj  Challenge.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test.py
Challenge/: Challenge.cpp  Challenge.vcxproj  sqlite3.exp  sqlite3.lib
